--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://lebonecodesolutions.github.io/zulu-stories-classroom-03",
+  "homepage": ""homepage": "https://culturedafrica.co.za",
   "type": "module",
   "scripts": {
     "dev": "vite",
